[gd_scene load_steps=3 format=3 uid="uid://6mv8ilgynctq"]

[ext_resource type="Script" path="res://calculator.gd" id="1_q5trp"]
[ext_resource type="PackedScene" uid="uid://c55wrfjg6k1id" path="res://access_point.tscn" id="2_cq4je"]

[node name="Calculator" type="Node2D"]
position = Vector2(574.524, -201.587)
script = ExtResource("1_q5trp")
strength_a = 81.45
strength_b = 33.97
strength_c = 68.355

[node name="AccessPointA" parent="." node_paths=PackedStringArray("calculator") instance=ExtResource("2_cq4je")]
position = Vector2(6000, 4000)
calculator = NodePath("..")
strength = 3161.99

[node name="Handle" parent="AccessPointA" index="0"]
position = Vector2(-1722.41, -2651.69)

[node name="Label" parent="AccessPointA" index="1"]
text = "A"

[node name="AccessPointB" parent="." node_paths=PackedStringArray("calculator") instance=ExtResource("2_cq4je")]
position = Vector2(6000, 0)
calculator = NodePath("..")
strength = 2985.28

[node name="Handle" parent="AccessPointB" index="0"]
position = Vector2(2976.95, 222.874)

[node name="Label" parent="AccessPointB" index="1"]
text = "B"

[node name="AccessPointC" parent="." node_paths=PackedStringArray("calculator") instance=ExtResource("2_cq4je")]
position = Vector2(0, 2000)
calculator = NodePath("..")
strength = 4762.02

[node name="Handle" parent="AccessPointC" index="0"]
position = Vector2(4571.23, -1334.44)

[node name="Label" parent="AccessPointC" index="1"]
text = "C"

[editable path="AccessPointA"]
[editable path="AccessPointB"]
[editable path="AccessPointC"]
